--- a/softwerkskammer/lib/administration/views/activityTable.pug
+++ b/softwerkskammer/lib/administration/views/activityTable.pug
@@ -13,7 +13,7 @@ block content
     .col-12
       .page-header
         h2 Verwaltung #{' '}
-          small  Aktivitäten  
+          small  Aktivitäten
       .table-responsive
         table.table.table-sm.table-hover.table-striped#activitytable
           thead
@@ -30,7 +30,7 @@ block content
           tbody
             for activity in activities
               tr
-                td: a.btn-sm(href='/activities/edit/' + encodeURIComponent(activity.url())): i.fas.fa-edit.fa-fw
+                td: a.btn-sm(href='/activities/edit/' + encodeURIComponent(activity.url())): i.fa-solid.fa-pen-to-square.fa-fw
                 td #{activity.title()}
                 td #{activity.url()}
                 td #{activity.startDateTime().setLocale(language).toLocaleString(DateTime.DATE_SHORT)}
