--- a/softwerkskammer/lib/dashboard/views/index.pug
+++ b/softwerkskammer/lib/dashboard/views/index.pug
@@ -32,9 +32,9 @@ mixin my_groups
           .card.mb-2
             h5.card-header(style='background-color: ' + group.color + '; color: #FFFFFF;')
               a.inherit-color.chevron(data-bs-toggle='collapse', data-bs-target='#' + panelid): b
-                i.far.fa-caret-square-down.fa-fw.blog
+                i.fa-regular.fa-caret-square-down.fa-fw.blog
                 | &nbsp;#{group.longName}
-              a.inherit-color(href='/groups/' + group.id): span.float-end: i.fas.fa-users.fa-fw.tooltipify(data-bs-toggle='tooltip', title=t('groups.tooltip.gotogroup'))
+              a.inherit-color(href='/groups/' + group.id): span.float-end: i.fa-solid.fa-users.fa-fw.tooltipify(data-bs-toggle='tooltip', title=t('groups.tooltip.gotogroup'))
             .collapse.show(id=panelid)
               .card-body
                 +wikichangesOrBlogs(postsByGroup[group.id], panelid, 'blogs', t('wiki.blogposts'))
@@ -49,9 +49,9 @@ mixin my_activities
         -var angemeldet = (member && activity.allRegisteredMembers().indexOf(member.id()) > -1)
         li.list-group-item
           if (angemeldet)
-            i.fas.fa-check.fa-fw.text-success.tooltipify(data-bs-toggle='tooltip', title=t('activities.tooltip.registered'))
+            i.fa-solid.fa-check.fa-fw.text-success.tooltipify(data-bs-toggle='tooltip', title=t('activities.tooltip.registered'))
           else
-            i.fas.fa-question.fa-fw.tooltipify(data-bs-toggle='tooltip', title=t('activities.tooltip.unknown'))
+            i.fa-solid.fa-question.fa-fw.tooltipify(data-bs-toggle='tooltip', title=t('activities.tooltip.unknown'))
           | &nbsp; #{activity.startDateTime().setLocale(language).toLocaleString(DateTime.DATE_SHORT)} &nbsp;
           a(href=activity.fullyQualifiedUrl()) #{activity.title()}
           a.float-end(href='/groups/' + activity.assignedGroup())
@@ -61,11 +61,11 @@ mixin wikichangesOrBlogs(items, panelid, prefix, title)
   if (items.length > 0)
     h5.card-title.my-2
       a.chevron(data-bs-toggle='collapse', data-bs-target='#' + panelid + ' .' + prefix)
-        i.far.fa-caret-square-down.fa-fw.blog
+        i.fa-regular.fa-caret-square-down.fa-fw.blog
         | &nbsp;#{title}
     ul.list-group.list-group-flush(class=prefix + ' collapse show')
       each item in items
         li.list-group-item.py-0
           a.modaldialog(data-bs-toggle='modal', data-bs-target='#wikidialog', data-link=item.dialogUrl(), href='#') #{item.pureName()}
           small.float-end #{item.date().setLocale(language).toLocaleString(DateTime.DATE_SHORT)}&nbsp;
-            a(href=item.url()): i.fas.fa-book.fa-fw.tooltipify(data-bs-toggle='tooltip', title=t('wiki.tooltip.gotopage'))
+            a(href=item.url()): i.fa-solid.fa-book.fa-fw.tooltipify(data-bs-toggle='tooltip', title=t('wiki.tooltip.gotopage'))
