--- a/softwerkskammer/lib/site/views/authenticationRequired.pug
+++ b/softwerkskammer/lib/site/views/authenticationRequired.pug
@@ -9,5 +9,5 @@ block content
     .col-lg-6
       h3 #{t('authentication.please_authenticate')}
       p.modaldialog.btn.btn-primary(data-bs-toggle='modal', data-bs-target='#login', data-link='/loginDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))
-        i.fas.fa-sign-in-alt.fa-fw
+        i.fa-solid.fa-right-to-bracket.fa-fw
         | &nbsp;#{t('general.login')}
