--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -3,7 +3,7 @@ extends ../../../views/layoutOnlyMain
 mixin defItem(title, url, text)
   dt.col-3.text-truncate #{title}:
   dd.col-9.mb-0: a(href=url, target='_blank')
-    i.fas.fa-external-link-alt
+    i.fa-solid.fa-up-right-from-square
     | &nbsp;#{text}
 
 block title
