--- a/softwerkskammer/views/imageUpload.pug
+++ b/softwerkskammer/views/imageUpload.pug
@@ -1,6 +1,6 @@
 mixin selectFileButton(label, extraclasses)
   span.btn.btn-primary.btn-file(class=extraclasses)
-    i.fas.fa-fw.fa-camera-retro.fa-lg
+    i.fa-solid.fa-fw.fa-camera-retro.fa-lg
     | &nbsp; #{t(label)}
     input#input-file(type='file', accept='image/*', name='image')
 
