--- a/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
+++ b/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
@@ -32,4 +32,4 @@ block content
                 for group in groups
                   td.center
                     if group.isMemberSubscribed(member)
-                      i.fas.fa-check &nbsp;
+                      i.fa-solid.fa-check &nbsp;
