--- a/softwerkskammer/lib/groups/views/index.pug
+++ b/softwerkskammer/lib/groups/views/index.pug
@@ -13,7 +13,7 @@ block content
       .page-header
         .btn-group.float-end
           if (accessrights.isSuperuser())
-            a.btn.btn-light(href='new/', title=t('groups.new')): i.far.fa-file.fa-fw
+            a.btn.btn-light(href='new/', title=t('groups.new')): i.fa-regular.fa-file.fa-fw
         h1 #{t('groups.groups')}
   .row
     .col-lg-6
