minor fixes (credits.pug/ wiki rename dialog)

--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -100,7 +100,7 @@ block content
         +defItem('grunt-simple-nyc', 'https://github.com/tandrewnichols/grunt-simple-nyc', 'Coverage check with mocha')
         +defItem('Must', 'https://github.com/moll/js-must', 'BDD TDD Assertion Library')
         +defItem('Sinon', 'http://sinonjs.org', 'Mock Framework')
-        +defItem('Request', 'http://github.com/mikeal/request.git', 'Für Integrationstests')
+        +defItem('Superagent', 'https://github.com/visionmedia/superagent', 'Used to call other services')
         +defItem('Supertest', 'https://github.com/visionmedia/supertest', 'Einfache Integrationstests')
         +defItem('ESLint', 'http://eslint.org/', 'Metrik/Qualitäts/Style Checker')
         +defItem('Pug-Lint', 'https://github.com/pugjs/pug-lint', 'Problem- and Style Checker für pug')
