--- a/softwerkskammer/lib/wiki/views/get.pug
+++ b/softwerkskammer/lib/wiki/views/get.pug
@@ -10,7 +10,7 @@ block content
       .modal-content
         .modal-header
           h3.modal-title #{t('wiki.rename', {pageName: pageName})}
-          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          button.btn-close(type='button', data-bs-dismiss='modal', aria-hidden='true')
         .modal-body
           .row
             .col-md-12
@@ -28,7 +28,7 @@ block content
           a.btn.btn-light(href='/wiki/list/' + subdir + '/', title=t('wiki.all_pages') + ' "' + subdir + '"'): i.fa-solid.fa-list.fa-fw
           a.btn.btn-light(href='/wiki/versions/' + subdir + '/' + pageName, title=t('wiki.revisions')): i.fa-solid.fa-arrow-down-wide-short.fa-fw
           if (canEdit)
-            a.btn.btn-light(data-toggle='modal', href='#renameDialog', title=t('general.rename')): i.fa-solid.fa-gears.fa-fw
+            a.btn.btn-light.modaldialog(data-bs-toggle='modal', data-bs-target='#renameDialog', title=t('general.rename', href='#')): i.fa-solid.fa-gears.fa-fw
             a.btn.btn-light(href='/wiki/edit/' + subdir + '/' + pageName, title=t('general.edit')): i.fa-solid.fa-pen-to-square.fa-fw
       form.d-print-none.form-search.float-end(action='/wiki/search', method='post')
         +csrf
