--- a/softwerkskammer/views/layoutComponents.pug
+++ b/softwerkskammer/views/layoutComponents.pug
@@ -1,11 +1,11 @@
 mixin administrationMenu
   if (accessrights.isSuperuser())
-    ul.navbar-nav.ml-md-auto.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior=true)
-      li.nav-item.dropdown(data-agoranav='administration')
-        a.nav-link.dropdown-toggle(href='#')
+    ul.navbar-nav.ml-md-auto.mr-3
+      li.nav-item.dropup(data-agoranav='administration')
+        a.nav-link.dropdown-toggle(href='#', data-bs-toggle='dropdown')
           i.fa-solid.fa-gauge.fa-fw
           | &nbsp;#{t('general.administration')}&nbsp;
-        ul.dropdown-menu
+        ul.dropdown-menu.dropdown-menu-end
           li: a.dropdown-item.nav-link(href='/administration/activityTable')
             i.fa-regular.fa-calendar-alt.fa-fw
             | &nbsp;#{t('activities.activities')}
@@ -24,13 +24,13 @@ mixin administrationMenu
 
 mixin loginMenu(forInline)
   li.nav-item.dropdown(class=forInline ? 'd-sm-none': '')
-    a.nav-link.dropdown-toggle(href='#')
+    a.nav-link.dropdown-toggle(href='#', data-bs-toggle='dropdown')
       i.fa-solid.fa-circle-info.fa-fw
       if accessrights.isRegistered()
         | &nbsp;#{user.member.nickname()}
       else
         | &nbsp;#{t('general.guest')}
-    ul.dropdown-menu
+    ul.dropdown-menu.dropdown-menu-end
       if accessrights.isRegistered()
         li: a.dropdown-item.nav-link(href='/members/' + encodeURIComponent(user.member.nickname()))
           i.fa-solid.fa-eye.fa-fw
@@ -67,7 +67,7 @@ mixin languageEntry(forInline, lang, title, img)
 
 mixin navbar-inside
   .navbar.navbar-collapse
-    ul.nav.navbar-nav.md-auto.d-flex.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior=true)
+    ul.nav.navbar-nav.md-auto.d-flex.mr-3
       li.nav-item(data-agoranav='impressum'): a.nav-link(href='/impressum.html') #{t('general.legal_notice')}
       li.nav-item(data-agoranav='wiki/hilfe'): a.nav-link(href='/help.html') #{t('general.faq')}
       li.nav-item: a.nav-link(href='/credits.html') #{t('general.credits')}
@@ -93,7 +93,7 @@ mixin topNavbar()
     i.fa-solid.fa-bars.fa-lg
 
   .navbar-collapse.collapse.collapse-top.align-self-end
-    ul.nav.navbar-nav(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior=true)
+    ul.nav.navbar-nav
       li.nav-item(data-agoranav='dashboard'): a.nav-link(href='/dashboard')
         i.fa-solid.fa-table-list.fa-fw
         span.d-sm-none.d-md-inline &nbsp;#{t('dashboard.dashboard')}
@@ -104,19 +104,18 @@ mixin topNavbar()
         i.fa-solid.fa-users.fa-fw
         span.d-sm-none.d-md-inline &nbsp;#{t('groups.groups')}
       li.nav-item.dropdown(data-agoranav='wiki')
-        a.nav-link.dropdown-toggle(href='#')
+        a.nav-link.dropdown-toggle(href='#', data-bs-toggle='dropdown')
           i.fa-solid.fa-book.fa-fw
           span.d-sm-none.d-md-inline &nbsp;#{t('wiki.wiki')}&nbsp;
         ul.dropdown-menu
           if (structuredWikisubdirs)
             for wikisubdirs, key in structuredWikisubdirs
-              li.dropdown
-                a.dropdown-item.nav-link.dropdown-toggle(href='#') #{t('groups.' + key)}
-                ul.dropdown-menu
+              li.dropdown.dropend
+                a.dropdown-item.nav-link.dropdown-toggle(href='#', data-bs-toggle='dropdown') #{t('groups.' + key)}
+                .dropdown-menu
                   if (wikisubdirs.length)
                     for subdir in wikisubdirs
-                      li
-                        a.dropdown-item(href='/wiki/' + subdir + '/') #{subdir}
+                      a.dropdown-item(href='/wiki/' + subdir + '/') #{subdir}
                   else
                     li.nav-item: a.nav-link(href='#') <i>#{t('general.none')}</i>
       if (accessrights.isRegistered())
@@ -124,6 +123,6 @@ mixin topNavbar()
           i.fa-solid.fa-user.fa-fw
           span.d-sm-none.d-md-inline &nbsp;#{t('members.members')}
       +loginMenu(true)
-    ul.navbar-nav.ms-md-auto.d-none.d-md-flex.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior=true)
+    ul.navbar-nav.ms-md-auto.d-none.d-md-flex.mr-3
       +loginMenu
 
