--- a/softwerkskammer/frontend/sass/bootstrap-markdown.scss
+++ b/softwerkskammer/frontend/sass/bootstrap-markdown.scss
@@ -1,5 +1,5 @@
 /**
- * Bootstrap-Markdown.less
+ * Bootstrap-Markdown.sass
  *
  * @author Taufan Aditya @taufanaditya
  * @copyright 2013-2016 Taufan Aditya
