--- a/softwerkskammer/views/dataTables-mixin.pug
+++ b/softwerkskammer/views/dataTables-mixin.pug
@@ -1,6 +1,6 @@
 
 mixin dataTableImport()
-  script(src='/clientscripts/jquery.dataTables.js')
+  script(src='/clientscripts/dataTables.js')
   script(src='/clientscripts/dataTables.bootstrap5.js')
 
 mixin dataTable(clazz, sorting, columns, stateSaveAndSearch)
