--- a/softwerkskammer/lib/activities/views/activities-forms.pug
+++ b/softwerkskammer/lib/activities/views/activities-forms.pug
@@ -5,6 +5,8 @@ mixin activityform(activity, groups, editorNames, participantNames)
     +csrf
     if (activity.id())
       +hidden('id', activity.id())
+    if (activity.version())
+      +hidden('version', activity.version())
     +hidden('previousUrl', activity.url())
     fieldset
       .row
