remove lots of async/await

--- a/softwerkskammer/lib/activities/views/activities-forms.pug
+++ b/softwerkskammer/lib/activities/views/activities-forms.pug
@@ -5,7 +5,7 @@ mixin activityform(activity, groups, editorNames, participantNames)
     +csrf
     if (activity.id())
       +hidden('id', activity.id())
-    if (activity.version())
+    if (activity && activity.version && activity.version())
       +hidden('version', activity.version())
     +hidden('previousUrl', activity.url())
     fieldset
