--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -27,10 +27,9 @@ block content
         +defItem('Node.js', 'http://nodejs.org', 'Plattform')
         +defItem('Express', 'http://expressjs.com/api.html', 'Applikationsframework')
         +defItem('Passport', 'http://passportjs.org/', 'Authorisierung in Express')
+        +defItem('Better Sqlite3', 'https://github.com/WiseLibs/better-sqlite3', 'Treiber für SQLite')
+        +defItem('Better Sqlite3 Session Store for Express', 'https://github.com/attestate/better-sqlite3-session-store', 'Express sessions für SQLite')
         +defItem('simple-configure', 'https://github.com/NicoleRauch/simple-configure', 'Variablen konfigurierbar setzen')
-        +defItem('Cool Beans', 'https://github.com/dhughes/CoolBeans', 'Dependency Injection à la Spring')
-        +defItem('MongoDB Treiber', 'http://mongodb.github.io/node-mongodb-native/', 'Persistenz')
-        +defItem('Connect-Mongostore', 'https://github.com/diversario/connect-mongostore', 'Persistente Sessions')
         +defItem('Winston', 'https://github.com/flatiron/winston', 'Logging')
         +defItem('icalendar', 'https://github.com/tritech/node-icalendar', 'Einfaches Erstellen von vcal/ical Dateien')
         +defItem('Nodemailer', 'https://github.com/andris9/Nodemailer', 'Mails versenden')
@@ -75,7 +74,6 @@ block content
       dl.row
         +defItem('Pug', 'https://pugjs.org', 'Template Engine')
         +defItem('Marked', 'https://github.com/chjj/marked', 'Markdown nach HTML')
-        +defItem('Syntaxhighlighter', 'https://github.com/thlorenz/node-syntaxhighlighter', 'Syntax Highlighting in markdown')
         +defItem('iconv-lite', 'https://github.com/ashtuchkin/iconv-lite', 'Text Recoding')
         +defItem('Sharp', 'https://sharp.pixelplumbing.com/', 'Bearbeiten von Bildern')
         +defItem('exifr', 'https://github.com/MikeKovarik/exifr', 'Extrahieren von Exif Informationen')
